--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2020 Git. Traning
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An greate Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			something interesting
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy;some Company 2014</p>
 	</footer>
 </body>
 </html>
