--- a/simple.html
+++ b/simple.html
@@ -32,7 +32,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git traning Company 2014</p>
+		<p>&copy; Git traning Company 2014, All rights reserved.</p>
 	</footer>
 </body>
 </html>
