remote: minor changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2020 Git. Traning
+	Copyright 2020 Git. Traning, update from remote
 -->
 <head>
 	<title>An greate Website</title>
