Done with simple.html udpate

--- a/simple.html
+++ b/simple.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <!--
-<<<<<<< HEAD
 	Copyright 2020 Git. Traning, update from remote
-=======
-	Copyright 2020 Git. Traning
 	Adding something here
-<<<<<<< HEAD
 	some silly changes from master branch
->>>>>>> 4f8e6c8 (mb conflicting changes brewing)
-=======
 	some other changes from branch bigtrouble
->>>>>>> c544239 (fb adding some trouble to simple.html)
 -->
 <head>
-	<title>An greate Website</title>
+	<title>Updating title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -27,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			something interesting
+			something interesting, Adding more here for stash
 			Not sure if we should replace something here
 		</p>
 	</main>
