--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 	some other changes from branch bigtrouble
 -->
 <head>
-	<title>Updating title for Multple Stash Example</title>
+	<title>Updating title for Tagging compare Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
